[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-parachain-template.git"
edition = "2021"

[workspace]
default-members = ["pallets/*", "runtime"]
members = [
    "node",
    "pallets/*",
    "pallets/pallet-content-registry/rpc",
    "pallets/pallet-content-registry/rpc/runtime-api",
    "pallets/pallet-context-court/rpc",
    "pallets/pallet-context-court/rpc/runtime-api",
    "runtime",
]

resolver = "2"

[workspace.dependencies]
parachain-template-runtime = { path = "./runtime", default-features = false }
clap = { version = "4.5.13" }
color-print = { version = "0.3.4" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4.22", default-features = false }
polkadot-sdk = { version = "2503.0.1", default-features = false }
prometheus-endpoint = { version = "0.17.2", default-features = false, package = "substrate-prometheus-endpoint" }
serde = { version = "1.0.214", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
substrate-wasm-builder = { version = "26.0.1", default-features = false }
frame = { version = "0.9.1", default-features = false, package = "polkadot-sdk-frame" }

hex = { version = "0.4", default-features = false }  

# Local Pallets
pallet-context-court = { path = "./pallets/pallet-context-court", default-features = false }
pallet-content-registry = { path = "./pallets/pallet-content-registry", default-features = false }
pallet-identity-registry = { path = "./pallets/pallet-identity-registry", default-features = false }
shared = { path = "./pallets/shared", default-features = false }
pallet-content-registry-rpc = { path = "./pallets/pallet-content-registry/rpc", default-features = false }
content-runtime-api  =  {path = "./pallets/pallet-content-registry/rpc/runtime-api", default-features = false}

pallet-context-court-rpc = { path = "./pallets/pallet-context-court/rpc", default-features = false }
context-runtime-api = { path = "./pallets/pallet-context-court/rpc/runtime-api", default-features = false}

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

