[package]
name = "pallet-context-court"
description = "FRAME pallet template for defining custom runtime logic."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }
shared = {workspace = true}
pallet-identity-registry = { workspace = true }
polkadot-sdk = { workspace = true, features = ["pallet-insecure-randomness-collective-flip", "frame-support", "pallet-balances", "sp-core"] }

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = ["codec/std", "frame/std", "scale-info/std", "shared/std", "pallet-identity-registry/std", "polkadot-sdk/std"]
try-runtime = ["frame/try-runtime"]
