[package]
name = "shared"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }

sp-core = { version = "35.0.0", default-features = false }
sp-io = { version = "39.0.0", default-features = false }
sp-runtime = { version = "40.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
log = "0.4.27"

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = [
    "codec/std",
    "frame/std", 
    "scale-info/std", 
    "sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    ]
try-runtime = ["frame/try-runtime"]
