[package]
name = "shared"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }
polkadot-sdk = { workspace = true, default-features = false, features = ["sp-std"] }

log = "0.4.27"

hex = { workspace = true, default-features = false }  

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = [
    "codec/std",
    "frame/std", 
    "scale-info/std",
    "polkadot-sdk/std",
    ]
try-runtime = ["frame/try-runtime"]
