[package]
name = "pallet-content-registry-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
codec = { features = ["derive"], workspace = true }

#substrate dependencies
# sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
# sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
# # sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
polkadot-sdk = { workspace = true, features = ["sp-blockchain"] }
# sp-runtime = { version = "40.1.0", default-features = false }
# local packages
content-runtime-api = { path = "./runtime-api", default-features = false }

# other dependencies
#jsonrpsee = { version = "0.16.2", features = ["server", "macros","client"] }
jsonrpsee = { features = ["server"], workspace = true }

lazy_static = { version = "1.4.0", optional = true }
tokio = { version = "1.17.0", optional = true }
serde = "1.0.136"
serde_json = "1.0.85" #1.0.96

[dev-dependencies]
assert_matches = "1.3.0"
tokio = "1.17.0"
lazy_static = "1.4.0"



[features]
default = ["std"]
std = [
    #"sp-api/std",
    #"sp-runtime/std",
    "content-runtime-api/std",
    "polkadot-sdk/std",
]
