[package]
name = "pallet-context-court-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
codec = { features = ["derive"], workspace = true }
polkadot-sdk = { workspace = true, features = ["sp-blockchain", "sp-runtime"] }
context-runtime-api = { path = "./runtime-api", default-features = false }
jsonrpsee = { features = ["server"], workspace = true}

lazy_static = { version = "1.4.0", optional = true }
tokio = { version = "1.17.0", optional = true }
serde = "1.0.136"
serde_json = "1.0.85" #1.0.96

[dev-dependencies]
assert_matches = "1.3.0"
tokio = "1.17.0"
lazy_static = "1.4.0"



[features]
default = ["std"]
std = [
    "context-runtime-api/std",
    "polkadot-sdk/std",
]